--- a/comics/223/index.html
+++ b/comics/223/index.html
@@ -9,24 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #223: Unfinished Projects</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #223: Unfinished Projects" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/223" />
+    <meta property="og:image" content="https://comicss.art/comics/223/thumb.png" />
+    <meta property="og:description" content="comic with two panels. In the first one, a ghost says Remember: if you don't want to end up a ghost like me, don't abandon anything halfway or leave unfinished projects behind! In the second panel, two people with a DEV tag say 'Oh fuck!'" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/223">
+    <meta name="twitter:title" content="comiCSS #223: Unfinished Projects">
+    <meta name="twitter:description" content="comic with two panels. In the first one, a ghost says Remember: if you don't want to end up a ghost like me, don't abandon anything halfway or leave unfinished projects behind! In the second panel, two people with a DEV tag say 'Oh fuck!'">
+    <meta name="twitter:image" content="https://comicss.art/comics/223/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
-    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 
-    <link rel="canonical" href="https://comicss.art" />
+    <link rel="canonical" href="https://comicss.art/comics/223" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -126,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/224" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -140,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="comic with two panels. In the first one, a ghost says Remember: if you don't want to end up a ghost like me, don't abandon anything halfway or leave unfinished projects behind! In the second panel, two people with a DEV tag say 'Oh fuck!'">
+      <div id="comic-strip" role="img" class="" aria-label="comic with two panels. In the first one, a ghost says Remember: if you don't want to end up a ghost like me, don't abandon anything halfway or leave unfinished projects behind! In the second panel, two people with a DEV tag say 'Oh fuck!'">
         <img src="/comics/223/223-unfinished-projects-0.webp" alt="" width="350" />
         <img src="/comics/223/223-unfinished-projects-1.webp" alt="" width="350" />
       </div>
@@ -166,7 +165,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/224" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -180,8 +179,8 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/223">https://comicss.art/comics/223</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/223/unfinished-projects.png">https://comicss.art/comics/223/unfinished-projects.png</a></p>
+      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/223">https://comicss.art/comics/223</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/223/unfinished-projects.png">https://comicss.art/comics/223/unfinished-projects.png</a></p>
       <p>Source code: <a aria-label="html version" id="code-link" href="/comics/223/unfinished-projects.html" rel="alternate">https://comicss.art/comics/223/unfinished-projects.html</a></p>
 
       <hr />
@@ -220,8 +219,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-11-24"></script>
+    <script>let postId = 223;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
