--- a/comics/224/index.html
+++ b/comics/224/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS #223: Unfinished Projects</title>
+    <title>comiCSS #224: Neapolitan</title>
 
-    <meta property="og:title" content="comiCSS #223: Unfinished Projects" />
+    <meta property="og:title" content="comiCSS #224: Neapolitan" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art/comics/223" />
-    <meta property="og:image" content="https://comicss.art/comics/223/thumb.png" />
-    <meta property="og:description" content="comic with two panels. In the first one, a ghost says Remember: if you don't want to end up a ghost like me, don't abandon anything halfway or leave unfinished projects behind! In the second panel, two people with a DEV tag say 'Oh fuck!'" />
+    <meta property="og:url" content="https://comicss.art/comics/224" />
+    <meta property="og:image" content="https://comicss.art/comics/224/thumb.png" />
+    <meta property="og:description" content="The Ice-Cream Web Stack: a neapolitan ice cream with arrows pointing to the chocolate, vanilla, and strawberry. JavaScript is chocolate: Rich, versatile, and everywhere. You cannot avoid it. It comes in many flavors, and people have very strong opinions about each one. HTML is vanilla: The structural backbone of the web. It may seem plain, but it is essential, reliable, and pairs with everything. CSS is strawberry: The color and creativity. It adds personality, style, and makes everything look (and taste) better." />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://comicss.art/comics/223">
-    <meta name="twitter:title" content="comiCSS #223: Unfinished Projects">
-    <meta name="twitter:description" content="comic with two panels. In the first one, a ghost says Remember: if you don't want to end up a ghost like me, don't abandon anything halfway or leave unfinished projects behind! In the second panel, two people with a DEV tag say 'Oh fuck!'">
-    <meta name="twitter:image" content="https://comicss.art/comics/223/thumb.png">
+    <meta name="twitter:url" content="https://comicss.art/comics/224">
+    <meta name="twitter:title" content="comiCSS #224: Neapolitan">
+    <meta name="twitter:description" content="The Ice-Cream Web Stack: a neapolitan ice cream with arrows pointing to the chocolate, vanilla, and strawberry. JavaScript is chocolate: Rich, versatile, and everywhere. You cannot avoid it. It comes in many flavors, and people have very strong opinions about each one. HTML is vanilla: The structural backbone of the web. It may seem plain, but it is essential, reliable, and pairs with everything. CSS is strawberry: The color and creativity. It adds personality, style, and makes everything look (and taste) better.">
+    <meta name="twitter:image" content="https://comicss.art/comics/224/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art/comics/223" />
+    <link rel="canonical" href="https://comicss.art/comics/224" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,13 +96,13 @@
         </ul>
       </nav>
     </header>
-    <main id="main">
+    <main id="main" class="latest">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Unfinished Projects</h1>
+      <h1>Neapolitan</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,13 +111,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/222" rel="prev">
+        <a href="/comics/223" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/10">
+        <a class="random-post" href="/comics/216">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/224" rel="next">
+        <a href="/comics/225" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,9 +139,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="" aria-label="comic with two panels. In the first one, a ghost says Remember: if you don't want to end up a ghost like me, don't abandon anything halfway or leave unfinished projects behind! In the second panel, two people with a DEV tag say 'Oh fuck!'">
-        <img src="/comics/223/223-unfinished-projects-0.webp" alt="" width="350" />
-        <img src="/comics/223/223-unfinished-projects-1.webp" alt="" width="350" />
+      <div id="comic-strip" role="img" class="vertical" aria-label="The Ice-Cream Web Stack: a neapolitan ice cream with arrows pointing to the chocolate, vanilla, and strawberry. JavaScript is chocolate: Rich, versatile, and everywhere. You cannot avoid it. It comes in many flavors, and people have very strong opinions about each one. HTML is vanilla: The structural backbone of the web. It may seem plain, but it is essential, reliable, and pairs with everything. CSS is strawberry: The color and creativity. It adds personality, style, and makes everything look (and taste) better.">
+        <img src="/comics/224/224-neapolitan-0.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -151,13 +150,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/222" rel="prev">
+        <a href="/comics/223" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/145">
+        <a class="random-post" href="/comics/128">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -165,7 +164,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/224" rel="next">
+        <a href="/comics/225" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -179,9 +178,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/223">https://comicss.art/comics/223</a></p>
-      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/223/unfinished-projects.png">https://comicss.art/comics/223/unfinished-projects.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/223/unfinished-projects.html" rel="alternate">https://comicss.art/comics/223/unfinished-projects.html</a></p>
+      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/224">https://comicss.art/comics/224</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/224/neapolitan.png">https://comicss.art/comics/224/neapolitan.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/224/neapolitan.html" rel="alternate">https://comicss.art/comics/224/neapolitan.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -219,7 +218,7 @@
       </nav>
     </footer>
 
-    <script>let postId = 223;</script>
+    <script>let postId = 224;</script>
     <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
