--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Unfinished Projects</h1>
+      <h1>Neapolitan</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -112,13 +112,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/222" rel="prev">
+        <a href="/comics/223" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/10">
+        <a class="random-post" href="/comics/216">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -140,9 +140,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="comic with two panels. In the first one, a ghost says Remember: if you don't want to end up a ghost like me, don't abandon anything halfway or leave unfinished projects behind! In the second panel, two people with a DEV tag say 'Oh fuck!'">
-        <img src="/comics/223/223-unfinished-projects-0.webp" alt="" width="350" />
-        <img src="/comics/223/223-unfinished-projects-1.webp" alt="" width="350" />
+      <div id="comic-strip" class="vertical" role="img" aria-label="The Ice-Cream Web Stack: a neapolitan ice cream with arrows pointing to the chocolate, vanilla, and strawberry. JavaScript is chocolate: Rich, versatile, and everywhere. You cannot avoid it. It comes in many flavors, and people have very strong opinions about each one. HTML is vanilla: The structural backbone of the web. It may seem plain, but it is essential, reliable, and pairs with everything. CSS is strawberry: The color and creativity. It adds personality, style, and makes everything look (and taste) better.">
+        <img src="/comics/224/224-neapolitan-0.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -152,13 +151,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/222" rel="prev">
+        <a href="/comics/223" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/145">
+        <a class="random-post" href="/comics/128">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -180,9 +179,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/223">https://comicss.art/comics/223</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/223/unfinished-projects.png">https://comicss.art/comics/223/unfinished-projects.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/223/unfinished-projects.html" rel="alternate">https://comicss.art/comics/223/unfinished-projects.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/224">https://comicss.art/comics/224</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/224/neapolitan.png">https://comicss.art/comics/224/neapolitan.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/224/neapolitan.html" rel="alternate">https://comicss.art/comics/224/neapolitan.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -221,7 +220,7 @@
     </footer>
 
     <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-11-24"></script>
+    <script src="/js/data.js?last-updated=2025-12-01"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
